--- a/DirtMaster/Views/AddRecordPage.xaml
+++ b/DirtMaster/Views/AddRecordPage.xaml
@@ -26,7 +26,7 @@
                               Margin="10">
                     <CarouselView.ItemTemplate>
                         <DataTemplate x:DataType="models:RegionModel">
-                            <Label Text="{Binding RegionName}" Style="{StaticResource BasicStyle}" TextColor="White" FontSize="44" VerticalTextAlignment="Start" HorizontalTextAlignment="Center" MaxLines="2" LineBreakMode="NoWrap"/>
+                            <Label Text="{Binding RegionName}" VerticalTextAlignment="Start" HorizontalTextAlignment="Center" MaxLines="2" LineBreakMode="NoWrap"/>
                         </DataTemplate>
                     </CarouselView.ItemTemplate>
                 </CarouselView>
@@ -43,7 +43,7 @@
                     </CarouselView.ItemsLayout>
                     <CarouselView.ItemTemplate>
                         <DataTemplate x:DataType="models:TrackModel">
-                            <Label Text="{Binding TrackName}" Style="{StaticResource BasicStyle}" TextColor="White" FontSize="38" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" VerticalOptions="CenterAndExpand">
+                            <Label Text="{Binding TrackName}" FontSize="38" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" VerticalOptions="CenterAndExpand">
                                 <VisualStateManager.VisualStateGroups>
                                     <VisualStateGroup>
                                         <VisualState x:Name="CurrentItem">
@@ -82,7 +82,7 @@
                         </DataTemplate>
                     </CarouselView.ItemTemplate>
                 </CarouselView>
-                <Button Command="{Binding NavigateToSetRecordTimeCommand}" Text="SELECT" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" CornerRadius="10" BackgroundColor="#f70e32" TextColor="White" FontSize="28" FontFamily="revolutiongothic.otf#revolutiongothic"/>
+                <Button Command="{Binding NavigateToSetRecordTimeCommand}" Text="SELECT" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"/>
             </Grid>
         </RelativeLayout>
     </ContentPage.Content>
