--- a/DirtMaster/Views/RegisterPage.xaml
+++ b/DirtMaster/Views/RegisterPage.xaml
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DirtMaster.Views.LoginPage"
+             x:Class="DirtMaster.Views.RegisterPage"
              NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <StackLayout Padding="20">
@@ -21,7 +21,7 @@
                     <Label Style="{StaticResource Logo1}"/>
                 </StackLayout>
             </StackLayout>
-            <Label Text="LOGIN PAGE" FontSize="50" HorizontalOptions="CenterAndExpand"/>
+            <Label Text="REGISTER PAGE" FontSize="50" HorizontalOptions="CenterAndExpand"/>
             <Rectangle HeightRequest="50"/>
             <StackLayout>
                 <Label Text="NAME" FontSize="38"/>
@@ -37,7 +37,7 @@
                 </Frame>
                 <Rectangle HeightRequest="50"/>
             </StackLayout>
-            <Button Text="LOGIN"/>
+            <Button Text="REGISTER"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
