Fixed bug, which doesn't show collection of Regions and Tracks in AddRecordPage (Streampath was old). Improved LoginPage, which navigates now to MainPage after typing proper Login and Password.

--- a/DirtMaster/Views/LoginOrRegisterTabbedPage.xaml
+++ b/DirtMaster/Views/LoginOrRegisterTabbedPage.xaml
@@ -7,7 +7,7 @@
             android:TabbedPage.ToolbarPlacement="Bottom"
             android:TabbedPage.IsSmoothScrollEnabled="false"
             BarTextColor="White"
-            BarBackgroundColor="Black"
+            BarBackgroundColor="#113C43"
             SelectedTabColor="White"
             UnselectedTabColor="White"
             Visual="Material"
