--- a/DirtMaster/Views/LoginPage.xaml
+++ b/DirtMaster/Views/LoginPage.xaml
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+             xmlns:vm="clr-namespace:DirtMaster.ViewModels"
+             x:DataType="vm:LoginViewModel"
              x:Class="DirtMaster.Views.LoginPage"
              NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
@@ -23,21 +26,28 @@
             </StackLayout>
             <Label Text="LOGIN PAGE" FontSize="50" HorizontalOptions="CenterAndExpand"/>
             <Rectangle HeightRequest="50"/>
+            <Label Text="INVALID NAME OR PASSWORD" FontSize="26" TextColor="#d70e32" IsVisible="false" HorizontalOptions="Center">
+                <Label.Triggers>
+                    <DataTrigger TargetType="Label" Binding="{Binding IsUserValid}" Value="false">
+                        <Setter Property="IsVisible" Value="true"/>
+                    </DataTrigger>
+                </Label.Triggers>
+            </Label>
             <StackLayout>
                 <Label Text="NAME" FontSize="38"/>
                 <Frame CornerRadius="10">
-                    <Entry Placeholder="Enter name"/>
+                    <Entry Text="{Binding Name}" Placeholder="Enter name"/>
                 </Frame>
             </StackLayout>
             <Rectangle HeightRequest="20"/>
             <StackLayout>
                 <Label Text="PASSWORD" FontSize="38"/>
                 <Frame CornerRadius="10">
-                    <Entry Placeholder="Enter password" IsPassword="True"/>
+                    <Entry Text="{Binding Password}" Placeholder="Enter password" IsPassword="True"/>
                 </Frame>
                 <Rectangle HeightRequest="50"/>
             </StackLayout>
-            <Button Text="LOGIN"/>
+            <Button Text="LOGIN" Command="{Binding CheckIsUserValidCommand}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
